Admin,conf_kuber/devkub-homeworks/kubernetes/kuber_Config/ingress-3.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress-3
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - kabaev.test.com
      secretName: test-tls
  rules:
  - host: kabaev.test.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
             name: nginx
             port:
               number: 80
